--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 DSN = "logistics:winnersme2020@tcp(db4free.net:3306)/logisticsapp?charset=utf8mb4&parseTime=True&loc=Local"
-SERVER_ADDRESS=localhost:3000
+PORT=":3000"
