--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DSN = "logistics:winnersme2020@tcp(db4free.net:3306)/logisticsapp?charset=utf8mb4&parseTime=True&loc=Local"
+DSN = "sql11463005:reeVj3PBXW@tcp(sql11.freemysqlhosting.net)/sql11463005?charset=utf8mb4&parseTime=True&loc=Local"
 PORT="8080"
